fix display bug on iOS (no flex on main)

--- a/app/assets/stylesheets/layouts/_default.scss
+++ b/app/assets/stylesheets/layouts/_default.scss
@@ -25,11 +25,13 @@ body {
 
   main {
     grid-area: main;
-    display: flex;
-    flex-direction: column;
+    display: block;
     width: 100%;
-    align-items: center;
     overflow-y: scroll;
+
+    > * {
+      margin: 0 auto;
+    }
 
     .pad {
       padding: 1rem;
